--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "stripe": "^11.8.0",
     "tmp": "^0.2.1",
     "uuid": "^9.0.0",
     "yarn": "^1.22.19"
