--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.33.0",
     "exceljs": "^4.3.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "nodemailer": "^6.8.0",
